FIXED: Caption overflow (CSS)
git-svn-id: https://plugins.svn.wordpress.org/easy-media-gallery@706851 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/trunk/css/styles/mediabox/Light.css
+++ b/trunk/css/styles/mediabox/Light.css
@@ -191,9 +191,10 @@
 	font-family:Verdana, Geneva, sans-serif !important;
 	color: #777;
 	display: block;
-	font-size: 1.2em !important;
+	font-size: 1.1em !important;
 	margin-top:10px;
 	font-style:italic;
+	width:100% !important;	
 }
 
 #mbCaption {
